--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                 </p>
                 <div class="white-button">
                   <span title="鸽子施工队正在紧锣密鼓建设中……！"><a>窥探世界</a></span>
-                  <span title="你对他们感兴趣吗？不是一个好选择，毕竟我还没做完呢^ ^)9❤"><a></a></span>
+                  <span title="你对他们这些不是人的孩子感兴趣吗？不是一个好选择，毕竟我还没做完呢^ ^)9❤"><a>这没有人</a></span>
                 </div>
                 
               </div>
@@ -221,7 +221,7 @@
                 </p>
                 <div class="white-button">
                   <span title="大家都幸福快乐的世界！鸽子施工队正在紧锣密鼓建设中……！"><a>改写命运</a></span>
-                  <span title="以后再来重新认识一下他们吧？毕竟我也还没做完呢^ ^)9❤"><a>再遇</a></span>
+                  <span title="以后再来重新认识一下他们吧？毕竟我也还没做完呢^ ^)9❤"><a>再遇故人</a></span>
                 </div>
               </div>
             </div>
