--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
                     data-type="zawujian"
                     name="isotope-filter"
                   />
-                  <span title="一般都是OC相关喔❤">阅览室</span></label
+                  <span title="一般都是OC相关喔">阅览室</span></label
                 >
                 <label
                   ><input
@@ -299,11 +299,11 @@
                       <a
                         href="assets/images/portfolio-01.jpg"
                         data-lightbox="image-1"
-                        data-title="Caption"
+                        data-title="可公开的情报-已知地图"
                         ><i class="fa fa-search"></i
                       ></a>
-                      <h4>世界观</h4>
-                      <span>更新主世界世界观。</span>
+                      <a href="https://aelier.github.io/rOmantiC/OC_WORLD/OC_MainWorld_view"><h4>世界观</h4>
+                      <span>更新主世界世界观。</span></a>
                     </figcaption>
                   </figure>
                 </div>
@@ -318,7 +318,7 @@
                       <a
                         href="assets/images/portfolio-02.jpg"
                         data-lightbox="image-1"
-                        data-title="Caption"
+                        data-title="“碎片”"
                         ><i class="fa fa-search"></i
                       ></a>
                       <h4>碎碎念</h4>
