--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                     <p style="text-align: right;"><del>这狗日的书我一天也不想读辣！</del></p>
                   </p>
                   <div class="white-button">
-                    <span title="鸽子施工队正在紧锣密鼓建设中……！"><a href="#section3">查阅更多</a></span>
+                    <span title="鸽子施工队正在紧锣密鼓建设中……！"><a>查阅更多</a></span>
                   </div>
                 </div>
               </div>
@@ -322,7 +322,7 @@
                         ><i class="fa fa-search"></i
                       ></a>
                       <h4>碎碎念</h4>
-                      <span>主页还在做但是我先放个碎碎念在这里</span>
+                      <span>还在做但是我先放个碎碎念在这里</span>
                     </figcaption>
                   </figure>
                 </div>
