--- a/index.html
+++ b/index.html
@@ -17,8 +17,6 @@
       </head>
       <body>
   
-  <script src="click/mo.min.js"></script>
-  <script src="click/mojs-player.min.js"></script>
   
   <script>
   'use strict';
@@ -168,6 +166,7 @@
                   </p>
                   <div class="white-button">
                     <span title="鸽子施工队正在紧锣密鼓建设中……！"><a>查阅更多</a></span>
+                      <div class="container">
                   </div>
                 </div>
               </div>
@@ -179,10 +178,10 @@
       <section class="section my-services" data-section="section2">
         <div class="container">
           <div class="section-heading">
-            <h2>OC相关</h2>
+            <h2>OC展览馆</h2>
             <div class="line-dec"></div>
             <span
-              >搭建网站的本意就是让我<del>就是图一乐呵</del>朋友们更好了解我的宝贝，<br>
+              >搭建网站的本意就是让我&ensp;<del>就是图一乐呵</del>&ensp;朋友们更好了解我的宝贝，<br>
               所以来都来了！不得拖着你看看我家的宝贝们吗~~</span
             >
           </div>
@@ -191,8 +190,8 @@
               <div class="service-item">
                 <h4>壹</h4>
                 <p>
-                  也许是耳朵，也许是尾巴，也许是头部或者下肢……
-                  总之，现在世界上没有不含兽类特征的“怪物”。
+                  也许是耳朵，也许是尾巴，也许是头部或者下肢……<br>
+                  总之，现在世界上没有不含兽类特征的<ruby>“怪物”<rt>纯人类</rt></ruby>。
                 </p>
                 <div class="white-button">
                   <span title="世界的运行……很奇妙吧？"><a href="https://aelier.github.io/rOmantiC/OC_WORLD/OC_MainWorld_view">窥探世界</a></span>
@@ -204,7 +203,8 @@
               <div class="service-item">
                 <h4>贰</h4>
                 <p>
-                  神离开了世界，我们失去了<span title="？？？：好死！开香槟咯！">“父亲”</span>。
+                  神离开了世界，<br>
+                  我们失去了<span title="？？？：好死！开香槟咯！"><ruby>“父亲”<rt>God</rt></ruby></span>。
                 </p>
                 <div class="white-button">
                   <span title="鸽子施工队正在紧锣密鼓建设中……！"><a>窥探世界</a></span>
@@ -217,7 +217,7 @@
               <div class="service-item">
                 <h4>叁</h4>
                 <p>
-                  ……<a title="出自《马戏之王》-《Rewrite The Stars》" >What if we rewrite the stars?</a>
+                  ……<a title="出自《马戏之王》-《Rewrite The Stars》" >What if we<ruby> rewrite the stars?<rt>重构星轨</rt></ruby></a>
                 </p>
                 <div class="white-button">
                   <span title="大家都幸福快乐的世界！鸽子施工队正在紧锣密鼓建设中……！"><a>改写命运</a></span>
@@ -288,7 +288,28 @@
                   <span title="我也不知道怎么分类捏">？？？</span></label
                 >
               </form>
+
+              
               <div class="isotope-box">
+                <div class="isotope-item" data-type="weifenlei">
+                  <figure class="snip1321">
+                    <img
+                      src="assets/images/portfolio-03.jpg"
+                      alt="sq-sample26"
+                    />
+                    <figcaption>
+                      <a
+                        href="assets/images/portfolio-03.jpg"
+                        data-lightbox="image-1"
+                        data-title="游戏-记忆纸牌<br>翻开所有相同的纸牌，就算成功。成功之后您可以随时再挑战。"
+                        ><i class="fa fa-search"></i
+                      ></a>
+                      <a href="https://aelier.github.io/rOmantiC/rOmantiC/Game"><h4><ruby>小&thinsp;游&thinsp;戏<rt>NEW!!</rt></ruby></h4>
+                      <span>会维持到下次大更新前的小游戏~？<br>^ ^)9请好好享受游玩的乐趣(?)吧！</span></a>
+                    </figcaption>
+                  </figure>
+                </div>
+
                 <div class="isotope-item" data-type="zawujian">
                   <figure class="snip1321">
                     <img
@@ -299,11 +320,11 @@
                       <a
                         href="assets/images/portfolio-01.jpg"
                         data-lightbox="image-1"
-                        data-title="可公开的情报-已知地图"
+                        data-title="情报-已知地图<br>也许随着时间的变化，我们知道的会更多。"
                         ><i class="fa fa-search"></i
                       ></a>
-                      <a href="https://aelier.github.io/rOmantiC/OC_WORLD/OC_MainWorld_view"><h4>世界观</h4>
-                      <span>更新主世界世界观。</span></a>
+                      <a href="https://aelier.github.io/rOmantiC/OC_WORLD/OC_MainWorld_view"><h4><ruby>世&thinsp;界&thinsp;观<rt>NEW!!</rt></ruby></h4>
+                      <span>新添加了主世界世界观的展馆！</span></a>
                     </figcaption>
                   </figure>
                 </div>
@@ -318,10 +339,10 @@
                       <a
                         href="assets/images/portfolio-02.jpg"
                         data-lightbox="image-1"
-                        data-title="“碎片”"
+                        data-title="“碎片”<br>零零碎碎，毫无意义。"
                         ><i class="fa fa-search"></i
                       ></a>
-                      <h4>碎碎念</h4>
+                      <h4><ruby>碎碎念<rt>NOW LOADING...</rt></ruby></h4>
                       <span>还在做但是我先放个碎碎念在这里</span>
                     </figcaption>
                   </figure>
