--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
       <body>
   
   
+<script src="click/mo.min.js"></script>
+<script src="click/mojs-player.min.js"></script>
+
+
   <script>
   'use strict';
   
