--- a/index.html
+++ b/index.html
@@ -144,11 +144,6 @@
               <br>
               <div class="line-dec"></div>
               <br>
-              <p style="text-align:right ">【施工记录】<br>
-              20220402:首页重施工，<del>变得更高级了</del><br>
-              20220221:更新主世界世界观<br>
-              </p
-            >
           </div>
           <div class="left-image-post">
             <div class="row">
@@ -198,8 +193,8 @@
                   总之，现在世界上没有不含兽类特征的<ruby>“怪物”<rt>纯人类</rt></ruby>。
                 </p>
                 <div class="white-button">
-                  <span title="世界的运行……很奇妙吧？"><a href="https://aelier.github.io/rOmantiC/OC_WORLD/OC_MainWorld_view">窥探世界</a></span>
-                  <span title="我宣誓，我自愿成为福瑞控！……你是已经有想寻找的对象了吗？"><a>寻找人物</a></span>
+                  <span title="世界的运行……很奇妙吧？"><a href="https://aelier.github.io/rOmantiC/OC_WORLD/OC_MainWorld/OC_MainWorld_view">窥探世界</a></span>
+                  <span title="我宣誓，我自愿成为福瑞控！……你是已经有想寻找的对象了吗？"><a href="https://aelier.github.io/rOmantiC/OC_WORLD/OC_MainWorld/ALL">寻找人物</a></span>
                 </div>
               </div>
             </div>
@@ -295,6 +290,25 @@
 
               
               <div class="isotope-box">
+                <div class="isotope-item" data-type="zawujian">
+                  <figure class="snip1321">
+                    <img
+                      src="assets/images/portfolio-04.jpg"
+                      alt="sq-sample26"
+                    />
+                    <figcaption>
+                      <a
+                        href="assets/images/portfolio-04.jpg"
+                        data-lightbox="image-1"
+                        data-title="情报-一直与未知<br>随着时间的变化，我们知道的一定会更多。"
+                        ><i class="fa fa-search"></i
+                      ></a>
+                      <a href="https://aelier.github.io/rOmantiC/OC_WORLD/OC_MainWorld/ALL"><h4><ruby>主&thinsp;世&thinsp;界<rt>NEW!!</rt></ruby></h4>
+                      <span>新添加了主世界人物的主要展馆！但是具体角色页面还在施工中……</span></a>
+                    </figcaption>
+                  </figure>
+                </div>
+
                 <div class="isotope-item" data-type="weifenlei">
                   <figure class="snip1321">
                     <img
@@ -327,7 +341,7 @@
                         data-title="情报-已知地图<br>也许随着时间的变化，我们知道的会更多。"
                         ><i class="fa fa-search"></i
                       ></a>
-                      <a href="https://aelier.github.io/rOmantiC/OC_WORLD/OC_MainWorld_view"><h4><ruby>世&thinsp;界&thinsp;观<rt>NEW!!</rt></ruby></h4>
+                      <a href="https://aelier.github.io/rOmantiC/OC_WORLD/OC_MainWorld/OC_MainWorld_view"><h4><ruby>世&thinsp;界&thinsp;观<rt>NEW!!</rt></ruby></h4>
                       <span>新添加了主世界世界观的展馆！</span></a>
                     </figcaption>
                   </figure>
@@ -364,6 +378,20 @@
             <h2><span title="我超，不会有知道这个网站的人没有我联系方式这种鬼事吧">联系方式？</span></h2>
             <p>有事请直接戳企鹅：<a href="tencent://AddContact/?fromId=45&fromSubId=1&subcmd=all&uin=2541975393&website=www.oicqzone.com">2541975393</a> </p>
             <p>邮箱也是可以的哦：<a href="mailto:weboth@foxmail.com">weboth@foxmail.com</a></p>
+<br><br><br>
+            <p style="text-align:right ">【施工记录】<br>
+              20220404:超效率！主世界观大主页完成!?<br>
+              20220402:首页重施工!<del>变得更高级了</del><br>
+              20220221:更新主世界世界观!<br>
+              </p
+            >
+<br><br><br>
+<hr>
+<span title="出自《Hands Up to the Sky》，以后每次更新都会给大家推歌~~"><p style="color: #625454;">"Listen up, Troublemaker!"<br>
+  听好了，王八蛋们!<br>
+  "How’d you know ’bout my fever?"<br>
+  你们怎会理解我的狂热<br>
+</p></span>
             </div>
           </div>
         </div>
