--- a/OC_WORLD/OC_MainWorld/OC_MainWorld_view.html
+++ b/OC_WORLD/OC_MainWorld/OC_MainWorld_view.html
@@ -97,7 +97,7 @@
     <link href="css/17sucai.css" rel="stylesheet" type="text/css" />
      
 <body>
-<pre><p style="text-align:right;"> <span title="哈哈，这里有个神必的数字7，但是我也不知道用来做什么！"; style="color: #ffffff;">END!</span>   <a href="https://aelier.github.io/rOmantiC/"><span style="font-family: SimHei;font-size: 20px;">|回到入口</span></a>         <a href="https://aelier.github.io/rOmantiC/OC_WORLD/OC_MainWorld/ALL"><span style="font-family: SimHei;font-size: 20px;">|回到OC区大厅</span></a></p></pre>  
+<pre><p style="text-align:right;"> <span title="哈哈，这里有个神必的数字7，但是我也不知道用来做什么！"; style="color: #ffffff;">END!</span>   <a href="https://aelier.github.io/rOmantiC/"><span style="font-family: SimHei;font-size: 20px;">|回到入口</span></a>         <a href="https://aelier.github.io/rOmantiC/OC_WORLD/OC_MainWorld/ALL"><span style="font-family: SimHei;font-size: 20px;">|人物一览</span></a></p></pre>  
 <div id="parallax-world-of-ugg">
 
     <section>
@@ -140,7 +140,7 @@
         <div class="block">
             <br>
             <p  class="margin-top-10" style="font-size: 17px;"><span class="first-character ny">城</span>市不断发展壮大，不断涌入四面八方的旅人。即使是在战时，<ruby>流动城市<rt>Irregular Markets</rt></ruby>也不断在各地产生，战后它们则直接聚集或单独发展起来构成了城市或者周围的小镇。
-                这些城市大多归顺于<ruby>帝国<rt>Lions Empire</rt></ruby>或是其他国家以寻求庇护，也有部分城市归选择顺于一些当地较有名望的领主。很少有城市会选择<ruby><span title="“金钱、资源和军队，要么全部拥有，只有一个或者完全没有的独治城市就等着被掠夺或者消亡吧！时间会证明独治仅是个笑话！”">独治</span><rt><span title="“帝国在压迫，领主在剥削，除了独治，没有什么能给我们自由！”">Autonomy</span></rt></ruby>，其本身的开放性也使得一个城市想要仅依靠自身发展起来基本上成了不可能的事情。</p>
+                这些城市大多归顺于<ruby>帝国<rt>Lions Empire</rt></ruby>或是其他国家以寻求庇护，也有部分城市归选择顺于一些当地较有名望的领主。很少有城市会选择<ruby><span title="“金钱、资源和军队，要么全部拥有……时间会证明独治仅是个笑话！”">独治</span><rt><span title="“帝国在压迫，领主在剥削，除了独治，没有什么能给我们自由！”">Autonomy</span></rt></ruby>，其本身的开放性也使得一个城市想要仅依靠自身发展起来基本上成了不可能的事情。</p>
             <p class="line-break margin-top-10"></p>
             <p  class="margin-top-10" style="font-size: 17px;">城市散布于大陆各处，各种地理面貌的区域中都有城市诞生，只是多寡大小有别。城市中的生活习惯也往往同当地历史、地貌，甚至与其信仰有关——很多城市即使抛弃信仰也不会改变风俗。混杂在一起的种族、风俗、语言，迅速发展也使得现在城市的社会形态变得比以前
                 任何时代都要复杂。想要彻底了解一个城市的想法是不切实际的——即使是对生长在这里的人往往也是如此。要在一个城市定居下来的旅者往往需要很长时间来了解一个城市才能做决定，这也是一部分不断旅行或开始旅程的原因。<br>……至少从现在看来，明天一定是城市的。</p>
