--- a/OC_WORLD/OC_MainWorld/LAND.html
+++ b/OC_WORLD/OC_MainWorld/LAND.html
@@ -129,7 +129,7 @@
 				<svg viewBox="0 0 180 320" preserveAspectRatio="none"><path d="M 180,160 0,218 0,0 180,0 z"/></svg>
 				<figcaption>
 					<h2><span title="也许一开始就不存在所谓的正解吧。">Answer</span></h2>
-					<p>一个一般路过的想困觉小猫咪，也想拉着你一起午睡。你难道要拒绝吗？<del>那你很有先见之明。</p>
+					<p>一个一般路过的想困觉的可爱小猫咪，也想拉着你一起午睡。你难道要拒绝吗？<del>那你很有先见之明。</del></p>
 					<button>要睡会吗</button>
 				</figcaption>
 			</figure>
