--- a/OC_WORLD/OC_MainWorld/ALL.html
+++ b/OC_WORLD/OC_MainWorld/ALL.html
@@ -152,7 +152,7 @@ document.onkeydown = function(){
 	</header>
 	
 	<section id="grid" class="grid clearfix">
-		<a href="javascript:void(0)" data-path-hover="m 0,0 0,47.7775 c 24.580441,3.12569 55.897012,-8.199417 90,-8.199417 34.10299,0 65.41956,11.325107 90,8.199417 L 180,0 z">
+		<a href="https://aelier.github.io/rOmantiC/OC_WORLD/OC_MainWorld/PersonalPage/Answer_main" data-path-hover="m 0,0 0,47.7775 c 24.580441,3.12569 55.897012,-8.199417 90,-8.199417 34.10299,0 65.41956,11.325107 90,8.199417 L 180,0 z">
 			<figure>
 				<img src="img/1.png" />
 				<svg viewBox="0 0 180 320" preserveAspectRatio="none"><path d="m 0,0 0,171.14385 c 24.580441,15.47138 55.897012,24.75772 90,24.75772 34.10299,0 65.41956,-9.28634 90,-24.75772 L 180,0 0,0 z"/></svg>
